# launch-mpi-processes-with-system

./: CMakeLists.txt  README.md  mpi.c  serial.c  testmpi.sh
